--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerAdditionalConfiguration.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/ui/view/barcode/configuration/BarcodeScannerAdditionalConfiguration.html
@@ -205,12 +205,6 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                             <td class="colLast"></td>
                                         </tr>
                                         
-                                        <tr class="altColor">
-                                            <td class="colFirst"><code>private final <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a></code></td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerAdditionalConfiguration.html#decodeStacks1D>decodeStacks1D</a></code></th>
-                                            <td class="colLast"></td>
-                                        </tr>
-                                        
                                     </table>
                                 </div>
                             </li>
@@ -237,7 +231,7 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                         
                                             <tr class="altColor">
                                                 <th class="colConstructorName" scope="row"><code><span class="memberNameLink"><a
-                                                        href="#BarcodeScannerAdditionalConfiguration(Integer,Integer,Integer,Boolean,EnumSet,Boolean,Boolean,BarcodeDensity,Integer)">BarcodeScannerAdditionalConfiguration</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> decodeStacks1D)</code></th>
+                                                        href="#BarcodeScannerAdditionalConfiguration(Integer,Integer,Integer,Boolean,EnumSet,Boolean,Boolean,BarcodeDensity)">BarcodeScannerAdditionalConfiguration</a></span>(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity)</code></th>
                                                 <td class="colLast"></td>
                                             </tr>
                                         
@@ -354,14 +348,6 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                             <td class="colLast">The expected density of QR codes.</td>
                                         </tr>
                                         
-                                        <tr id="i8" class="altColor">
-                                            <td class="colFirst"><code>final <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a></code>
-                                            </td>
-                                            <th class="colSecond" scope="row"><code><a href=BarcodeScannerAdditionalConfiguration.html#getDecodeStacks1D()>getDecodeStacks1D</a>() </code>
-                                            </th>
-                                            <td class="colLast">Number of stacks to split a 1D barcode crop before extracting scanlines.</td>
-                                        </tr>
-                                        
                                         </tbody>
                                     </table>
                                 </div>
@@ -393,11 +379,11 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                             </a>
                                 <h3>Constructor Detail</h3>
                                 
-                                <a name="BarcodeScannerAdditionalConfiguration(Integer,Integer,Integer,Boolean,EnumSet,Boolean,Boolean,BarcodeDensity,Integer)"></a>
+                                <a name="BarcodeScannerAdditionalConfiguration(Integer,Integer,Integer,Boolean,EnumSet,Boolean,Boolean,BarcodeDensity)"></a>
                                 <ul class="blockList">
                                     <li class="blockList">
                                         <h4>BarcodeScannerAdditionalConfiguration</h4>
-                                        <pre>BarcodeScannerAdditionalConfiguration(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> decodeStacks1D)</pre>
+                                        <pre>BarcodeScannerAdditionalConfiguration(<a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> maximumTextLength, <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> minimum1DQuietZoneSize, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> gs1DecodingEnabled, <a href=https://developer.android.com/reference/kotlin/java/util/EnumSet.html>EnumSet</a>&lt;<a href=../../../../barcode/entity/MSIPlesseyChecksumAlgorithm.html>MSIPlesseyChecksumAlgorithm</a>&gt; msiPlesseyChecksumAlgorithms, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> stripCheckDigits, <a href=https://developer.android.com/reference/kotlin/java/lang/Boolean.html>Boolean</a> lowPowerMode, <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> codeDensity)</pre>
                                         <div class="block"></div>
                                         
                                     </li>
@@ -525,27 +511,12 @@ public final class <span class="typeNameLabel"><a href=BarcodeScannerAdditionalC
                                     <!--   -->
                                 </a>
                                 <ul class=
-                                              "blockList"
+                                              "blockListLast"
                                           >
                                     <li class="blockList">
                                         <h4>getCodeDensity</h4>
                                         <pre class="methodSignature"> final <a href=../../../../barcode/entity/BarcodeDensity.html>BarcodeDensity</a> <a href=BarcodeScannerAdditionalConfiguration.html#getCodeDensity()>getCodeDensity</a>()</pre>
                                         <div class="block"><p>The expected density of QR codes. A higher density finds more QR codes in an image but the performance is slightly reduced. By default is <a href=../../../../barcode/entity/BarcodeDensity.html#LOW>BarcodeDensity.LOW</a></p></div>
-                                        
-                                        <!-- TODO missing return annotation -->
-                                    </li>
-                                </ul>
-                                
-                                <a id="getDecodeStacks1D()">
-                                    <!--   -->
-                                </a>
-                                <ul class=
-                                              "blockListLast"
-                                          >
-                                    <li class="blockList">
-                                        <h4>getDecodeStacks1D</h4>
-                                        <pre class="methodSignature"> final <a href=https://developer.android.com/reference/kotlin/java/lang/Integer.html>Integer</a> <a href=BarcodeScannerAdditionalConfiguration.html#getDecodeStacks1D()>getDecodeStacks1D</a>()</pre>
-                                        <div class="block"><p>Number of stacks to split a 1D barcode crop before extracting scanlines. For stacked RSS barcodes, this should be set to the numbers of stacks with which the barcode was printed. For other barcodes, the default of 1 is good enough. Setting it higher will slighty increase frame times, improve performance on hard barcodes and possibly increase the number of false positives.</p></div>
                                         
                                         <!-- TODO missing return annotation -->
                                     </li>
