--- a/barcode-scanner-sdk/android/api/io/scanbot/sdk/util/view/package-summary.html
+++ b/barcode-scanner-sdk/android/api/io/scanbot/sdk/util/view/package-summary.html
@@ -112,6 +112,8 @@ var pathtoroot = "../../../../../";
     <tr class="rowColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.Line.html>Line</a></th><td class="colLast">Representation of line  Calculates line by two points and finds intersection points with other lines  General line formula is a * x + b * y + c = 0</td></tr>
 
     <tr class="altColor"><th class="colFirst" scope="row"><a href=PolygonViewHelper.html>PolygonViewHelper</a></th><td class="colLast">Helper to make it easier to draw polygon on view</td></tr>
+
+    <tr class="rowColor"><th class="colFirst" scope="row"><a href=KotlinAndroidUtilKt.html>KotlinAndroidUtilKt</a></th><td class="colLast"></td></tr>
 </tbody>
 </table>
 
